Fix table caption alignment

--- a/src/assets/stylesheets/table.scss
+++ b/src/assets/stylesheets/table.scss
@@ -12,6 +12,7 @@
 	font-size: 16px;
 	font-style: normal;
 	padding-bottom: 30px;
+	text-align: left;
 }
 
 .table tr {
